# substrate-node-template

./: .gitignore  Cargo.toml  types.json
node/: Cargo.toml
pallets/kitty/: Cargo.toml
pallets/kitty/src/: lib.rs
pallets/name-registry/: Cargo.toml
pallets/name-registry/src/: lib.rs  mock.rs  tests.rs
pallets/relay/: Cargo.toml
pallets/relay/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/sample/: Cargo.toml
pallets/sample/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
