[package]
authors = ['Anonymous']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'
[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '0.8.0-alpha.5'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.template]
default-features = false
package = 'pallet-template'
path = '../pallets/template'
version = '2.0.0-alpha.5'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '2.0.0-alpha.5'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = 'd9e989a4b2ac16f6484eb954ed893091c6ac5ae1'
version = '1.0.5'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'template/std',
]
