[dependencies.aura]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'pallet-aura'
version = '2.0.0-rc3'

[dependencies.balances]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'pallet-balances'
version = '2.0.0-rc3'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'pallet-grandpa'
version = '2.0.0-rc3'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'pallet-randomness-collective-flip'
version = '2.0.0-rc3'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '0.8.0-rc3'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
version = '2.0.0-rc3'

[dependencies.sudo]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'pallet-sudo'
version = '2.0.0-rc3'

[dependencies.system]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'frame-system'
version = '2.0.0-rc3'

[dependencies.template]
default-features = false
package = 'pallet-template'
path = '../pallets/template'
version = '2.0.0-rc3'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'pallet-timestamp'
version = '2.0.0-rc3'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'pallet-transaction-payment'
version = '2.0.0-rc3'

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/yanganto/substrate.git'
branch='expose-hash-roots'
package = 'substrate-wasm-builder-runner'
version = '1.0.5'

[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc3'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'template/std',
]
