[package]
name = 'pallet-relay'
description = 'relay pallet for proposal mode'
edition = '2018'
version = '2.0.0-rc2'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.sample]
default-features = false
package = 'pallet-sample'
path = '../sample'
version = '2.0.0-rc2'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
